# taro

./: TODO.md  pyproject.toml
docs/: cli.md  instance-tui.md  tui.md
src/runtools/taro/: __init__.py  __main__.py  argsutil.py  cli.py  cliutil.py  files.py  jfilter.py  main.py  printer.py  style.py  testutil.py  theme.py
src/runtools/taro/cmd/: __init__.py  approve.py  clean.py  dash.py  env.py  exec.py  hist.py  history.py  history_remove.py  hostinfo.py  inspect.py  instance.py  jobs.py  listen.py  live.py  of.py  output.py  ps.py  release.py  resolve.py  resume.py  stats.py  stop.py  tail.py  tail_old.py  wait.py
src/runtools/taro/config/: taro.toml
src/runtools/taro/tui/: confirm.py  dashboard.py  dashboard.tcss  instance.tcss  instance_screen.py  job_screen.py  job_screen.tcss  jobs.py  jobs.tcss  search_modal.py  selector.py  selector.tcss  widgets.py
src/runtools/taro/view/: instance.py  output_render.py  stats.py  status_render.py
src/runtoolsio/taro/: __init__.py  __main__.py  argsutil.py  cli.py  cliutil.py  jfilter.py  logutil.py  printer.py  style.py  version.py
src/runtoolsio/taro/cmd/: clean.py  exec.py  hist.py  history.py  history_remove.py  hostinfo.py  listen.py  output.py  ps.py  release.py  stats.py  stop.py  tail.py  wait.py
src/runtoolsio/taro/config/: taro.toml
src/runtoolsio/taro/view/: instance.py  stats.py
src/tarotools/cli/: __init__.py  __main__.py  argsutil.py  cli.py  cliutil.py  jfilter.py  printer.py  style.py  version.py
src/tarotools/cli/cmd/: clean.py  exec.py  hist.py  history.py  history_remove.py  hostinfo.py  listen.py  output.py  ps.py  release.py  stats.py  stop.py  tail.py  wait.py
src/tarotools/cli/view/: instance.py  stats.py
src/test_plugin/: __init__.py
test/: taro_test_util.py  test_app_config.py  test_app_exec.py  test_app_exec_config.py  test_app_exec_logging.py  test_app_exec_output.py  test_app_exec_plugin.py  test_app_ps.py  test_app_stop.py  test_app_sync.py
