[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtools-taro"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.11"
dynamic = ["version", "description"]
dependencies = [
    #    "runtools-runcore @ git+ssh://git@github.com/runtoolsio/runcore",
    "pypager >=3.0.1",
    "typer>=0.15.4",
    "rich>=14.0.0",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.flit.module]
name = "runtools.taro"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/taro"
