[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "runtoolsio-taro"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dynamic = ["version", "description"]
dependencies = [
    "runtoolsio-runcore>=0.1,<0.2",
    "pypager >=3.0.1",
    "textual>=8.0.0",
    "typer>=0.15.4",
    "rich>=14.0.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
taro = "runtools.taro.main:run"

[tool.flit.module]
name = "runtools.taro"

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Home = "https://github.com/runtoolsio/taro"
